# random-people

./: README.md  make-random-people.py  pyproject.toml
people/Brian/: Brian.json
people/Nickolas/: Nickolas.json
