[tool.poetry]
name = "random-people"
version = "0.1.0"
description = "create random people using AI"
authors = ["Martin Davy <martin.davy@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.9.0.80"
requests = "^2.31.0"
names = "^0.3.0"
openai = "^1.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
